--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ button {
 /* logo */
 .logo {
   color: var(--primary-accent-cl);
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -156,12 +156,12 @@ button {
 }
 .active-link {
   color: var(--secondary-accent-cl);
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
 }
 
 .active-link::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 4px;
@@ -192,6 +192,7 @@ button {
 }
 .address-nav-link {
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link-active {
@@ -232,7 +233,7 @@ button {
   font-size: 16px;
   color: var(--primary-white-cl);
   letter-spacing: 0.04em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.5;
   cursor: pointer;
   display: block;
@@ -258,7 +259,7 @@ button {
   font-size: 16px;
   color: var(--primary-accent-cl);
   letter-spacing: 0.04em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.5;
   border: none;
   cursor: pointer;
@@ -435,6 +436,7 @@ button {
   border: 1px solid var(--primary-gray-cl);
   padding: 16px 32px;
   color: var(--primary-gray-bg);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -491,7 +493,7 @@ button {
   gap: 16px;
 }
 .footer-icon-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-link:hover,
