--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,6 @@ button {
 }
 .logo-link {
   margin-right: 76px;
-  transform: rotate(60deg);
 }
 .logo-black {
   color: var(--secondary-black-cl);
@@ -278,7 +277,6 @@ button {
 .portfolio-button:focus {
   background-color: var(--secondary-accent-bg);
   color: var(--primary-white-cl);
-  border: 1px solid transparent;
 }
 
 /* our advantage */
@@ -593,8 +591,8 @@ button {
 }
 .portfolio-bloks-item {
   width: calc((100% - 48px) / 3);
-  position: relative;
   overflow: hidden;
+  position: relative;
 }
 
 portfolio-bloks-item:hover .overlay {
@@ -607,14 +605,11 @@ portfolio-bloks-item:hover .overlay {
   border-top: none;
 }
 /* overlay */
-.overlay-box {
-  position: relative;
-  overflow: hidden;
-}
+
 .overlay {
   display: flex;
   width: 100%;
-  height: 70%;
+  height: 100%;
   flex-direction: column;
   flex-shrink: 0;
   color: #f4f4fd;
@@ -634,5 +629,5 @@ portfolio-bloks-item:hover .overlay {
 
 .portf-list:hover .overlay,
 .portf-list:focus .overlay {
-  transform: translateY(0%);
+  transform: translateY(0);
 }
