--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,11 @@ button {
   cursor: pointer;
   background-color: var(--primary-accent-bg);
 }
+
+.button:hover,
+.button:focus {
+  background-color: var(--secondary-accent-bg);
+}
 /**
   |============================
   | base styles
@@ -266,17 +271,18 @@ button {
   padding: 12px 24px;
   border: 1px solid --secondary-gray-bg;
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
-  background-color: var(--secondary-accent-bg);
-}
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: var(--secondary-accent-bg);
   color: var(--primary-white-cl);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* our advantage */
@@ -581,6 +587,17 @@ button {
 
 .portf-list {
   text-decoration: none;
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portf-list:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portf-list:hover .li-text {
+  transform: translateY(0%);
 }
 
 .portfolio-bloks {
@@ -591,12 +608,6 @@ button {
 }
 .portfolio-bloks-item {
   width: calc((100% - 48px) / 3);
-  overflow: hidden;
-  position: relative;
-}
-
-portfolio-bloks-item:hover .overlay {
-  transform: translateY(0);
 }
 
 .portfolio-bloks-name {
@@ -606,17 +617,22 @@ portfolio-bloks-item:hover .overlay {
 }
 /* overlay */
 
+.overlay-box {
+  position: relative;
+  overflow: hidden;
+}
+
 .overlay {
   display: flex;
   width: 100%;
   height: 100%;
   flex-direction: column;
   flex-shrink: 0;
-  color: #f4f4fd;
+  color: var(--secondary-white-cl);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
-  background-color: #4d5ae5;
+  background-color: var(--primary-accent-bg);
   align-items: center;
   text-align: center;
   padding: 40px 32px;
